syntax = "proto3";

option go_package = "./grpc";

service UptimeCheckService {
  rpc UptimeCheck(UptimeCheckRequest) returns (UptimeCheckResponse);
}

message UptimeCheckRequest {
    int64 start_time = 1;
    int64 end_time = 2;
}

message UptimeCheckResponse {
    string response = 1;
}